--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,11 @@
-[submodule "dataset/raw-data/ConceptARC"]
-	path = dataset/raw-data/ConceptARC
-	url = git@github.com:victorvikram/ConceptARC.git
-[submodule "dataset/raw-data/ARC-AGI"]
-	path = dataset/raw-data/ARC-AGI
-	url = git@github.com:fchollet/ARC-AGI.git
 [submodule "dataset/raw-data/ARC-AGI-2"]
-	path = dataset/raw-data/ARC-AGI-2
-	url = git@github.com:arcprize/ARC-AGI-2.git
+    path = dataset/raw-data/ARC-AGI-2
+    url = https://github.com/sapientinc/ARC-AGI-2.git
+
+[submodule "dataset/raw-data/ConceptARC"]
+    path = dataset/raw-data/ConceptARC
+    url = https://github.com/sapientinc/ConceptARC.git
+
+[submodule "dataset/raw-data/ARC-AGI"]
+    path = dataset/raw-data/ARC-AGI
+    url = https://github.com/sapientinc/ARC-AGI.git
